static/global.css
:root {
  --accent-color: #7381d2;
}

*, *:before, *:after {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: Merriweather, serif;
  font-size: 16px;
  line-height: 1.6;
  color: #36393b;
}

h1, h2, h3, h4, h5, h6 {
  font-family: Rubik, sans-serif;
  font-weight: 700;
  line-height: 1.2;
  margin: 0 0 0.5em 0;
}

h1 {
  font-family: Merriweather, serif;
  font-size: 4em;
  margin: 0 0 1em 0;
}

h2 {
  margin: 1.6em 0 0 0;
  font-size: 1.8em;
}

h3 {
  font-size: 1.5em;
}

h4 {
  font-size: 1.4em;
}

h5 {
  font-size: 1.3em;
}

h6 {
  font-size: 1.2em;
}

p, ul, ol {
  font-size: 1.3rem;
  line-height: 1.75em;
  margin: 1.2em 0;
}

ol, ul {
  padding-left: 2rem;
  -webkit-padding-start: 5%;
  -webkit-padding-end: 5%;
}

li {
  margin: 1rem 0;
}

li p {
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

a {
  color: inherit;
  transition: color linear .15s;
}

a:hover {
  color: var(--accent-color);
}

p a {
  text-decoration: none;
  box-shadow: inset 0 -0.12em 0 var(--accent-color);
  -webkit-transition: box-shadow .2s ease-in-out, color .2s ease-in-out;
  transition: box-shadow .2s ease-in-out, color .2s ease-in-out;
}

p a:hover {
  box-shadow: inset 0 -1.5em 0 var(--accent-color);
  color: #FFF;
}

img {
  max-width: 100%;
}

hr {
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(115, 129, 210, .8), rgba(0, 0, 0, 0));
  border: 0;
  height: 2px;
  margin: 40px auto;
}

code {
  font-family: 'SF Mono', menlo, inconsolata, monospace;
  font-size: calc(1em - 2px);
  color: #555;
  background-color: #f0f0f0;
  padding: 0.2em 0.4em;
  border-radius: 2px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

pre {
  border-radius: 8px!important;
  margin: 1.2em 0!important;
}

pre code {
  padding: 0;
}

blockquote {
  border-left: 4px solid #cccccc;
  font-size: 1.4em;
  font-style: italic;
  margin: 2rem 0;
  padding-left: 2rem;
  padding-right: 2rem;
}

blockquote p {
  padding-bottom: 6px;
}

blockquote footer {
  font-size: 1.1rem;
  text-align: right;
}

figure {
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  margin: 0 0 3em 0;
}

table {
  border-collapse: collapse;
  font-family: Rubik, sans-serif;
  font-size: 1.125em;
  margin: 2em 0;
}

th {
  border-bottom: 2px solid #cccccc;
  padding: 0.4em 0.8em;
}

td {
  padding: 0.4em 0.8em;
}

.container {
  margin: 0 auto;
  max-width: 42em;
  width: 100%;
}

.content h1 {
  font-size: 3em;
  margin: 1em 0;
}

@media (max-width: 1020px) {
  h1 {
    font-size: 3em;
  }

  .content h1 {
    font-size: 2.4em;
  }
}

@media (max-width: 480px) {
  body {
    font-size: 14px;
  }

  p, ul, ol {
    font-size: 1.2rem;
    margin: 1em 0;
  }
}

